# conseal

./: .gitignore  .readthedocs.yaml  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  run.py
.github/workflows/: on_commit.yml  on_release.yml
conseal/: __init__.py
conseal/F5/: __init__.py  _simulate.py
conseal/coding/: __init__.py  hamming.py  trellis.py  wpc.py
conseal/color/: __init__.py  common.py  qary.py
conseal/color/joint/: __init__.py  _binary.py  _ternary.py
conseal/ebs/: __init__.py  _costmap.py  _simulate.py
conseal/hill/: _costmap.py  _simulate.py
conseal/hugo/: _costmap.py  _simulate.py
conseal/juniward/: __init__.py  _costmap.py  _simulate.py
conseal/lsb/: __init__.py  _costmap.py  _selection_channel.py  _simulate.py
conseal/mipod/: __init__.py  _costmap.py  _defs.py  _simulate.py  ixlnx3.mat  ixlnx3_5.mat
conseal/nsF5/: __init__.py  _costmap.py  _simulate.py
conseal/simulate/: __init__.py  _binary.py  _defs.py  _lambda_estimation.py  _optim.py  _ternary.py  optim.py  optim_new.py
conseal/sunigard/: __init__.py  _costmap.py  _simulate.py
conseal/suniward/: _costmap.py  _simulate.py
conseal/tools/: __init__.py  _backend.py  common.py  dct.py  decompress.py  jpeg.py  lrt.py  permute.py  spatial.py
conseal/tools/scripts/: unseal.py
conseal/uerd/: __init__.py  _costmap.py  _simulate.py
conseal/wow/: __init__.py  _costmap.py  _simulate.py
conseal/ws/: __init__.py  _costmap.py
docs/: .gitignore  conf.py  faq.rst  glossary.rst  index.rst  reference.rst  requirements.txt  seal.tex  usage.rst
docs/source/: conf.py  faq.rst  index.rst  usage.rst
src/: hill.rs  lib.rs  wow.rs
test/: README.md  defs.py  test_coding.py  test_color.py  test_ebs.py  test_hill.py  test_hugo.py  test_juniward.py  test_juniward.py_  test_lambda_estimation.py  test_lsb.py  test_mipod.py  test_nsF5.py  test_simulate.py  test_sunigard.py  test_suniward.py  test_tools.py  test_uerd.py  test_wow.py
test/assets/costmap_matlab/ebs/: seal8.mat
test/assets/costmap_matlab/hugo/: seal1.mat  seal3.mat  seal7.mat  seal8.mat
test/assets/ebs/: lizard_gray_costmap.mat  mountain_gray_costmap.mat  nuclear_gray_costmap.mat
test/assets/ebs/costmap-matlab/: seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat
test/assets/hugo/costmap-matlab/: seal4.mat  seal5.mat
test/assets/hugo/costmap_matlab/: seal2.mat  seal6.mat
test/assets/juniward/costmap-cpp/: lizard_gray_fix.costmap  lizard_gray_original.costmap  mountain_gray_fix.costmap  mountain_gray_original.costmap  nuclear_gray_fix.costmap  nuclear_gray_original.costmap  seal1_fix_off_by_one.costmap  seal1_original.costmap  seal2_fix_off_by_one.costmap  seal2_original.costmap  seal3_fix_off_by_one.costmap  seal3_original.costmap  seal4_fix_off_by_one.costmap  seal4_original.costmap  seal5_fix_off_by_one.costmap  seal5_original.costmap  seal6_fix_off_by_one.costmap  seal6_original.costmap  seal7_fix_off_by_one.costmap  seal7_original.costmap  seal8_fix_off_by_one.costmap  seal8_original.costmap
test/assets/juniward/costmap-matlab/: lizard_gray_costmap_fix.mat  lizard_gray_costmap_original.mat  mountain_gray_costmap_fix.mat  mountain_gray_costmap_original.mat  nuclear_gray_costmap_fix.mat  nuclear_gray_costmap_original.mat  seal1_costmap_fix_off_by_one.mat  seal1_costmap_original.mat  seal2_costmap_fix_off_by_one.mat  seal2_costmap_original.mat  seal3_costmap_fix_off_by_one.mat  seal3_costmap_original.mat  seal4_costmap_fix_off_by_one.mat  seal4_costmap_original.mat  seal5_costmap_fix_off_by_one.mat  seal5_costmap_original.mat  seal6_costmap_fix_off_by_one.mat  seal6_costmap_original.mat  seal7_costmap_fix_off_by_one.mat  seal7_costmap_original.mat  seal8_costmap_fix_off_by_one.mat  seal8_costmap_original.mat
test/assets/mipod/: seal1_embedding_change_probs.mat  seal2_embedding_change_probs.mat  seal3_embedding_change_probs.mat  seal4_embedding_change_probs.mat  seal5_embedding_change_probs.mat  seal6_embedding_change_probs.mat  seal7_embedding_change_probs.mat  seal8_embedding_change_probs.mat
test/assets/nsF5/: nsF5.m
test/assets/suniward/costmap-matlab/: seal1_costmap.mat  seal2_costmap.mat  seal3_costmap.mat  seal4_costmap.mat  seal5_costmap.mat  seal6_costmap.mat  seal7_costmap.mat  seal8_costmap.mat
test/assets/uerd/: uerd.m
test/assets/wow/costmap-matlab/: seal1_costmap.mat  seal2_costmap.mat  seal3_costmap.mat  seal4_costmap.mat  seal5_costmap.mat  seal6_costmap.mat  seal7_costmap.mat  seal8_costmap.mat
tests/: README.md  defs.py  test.py  test_juniward.py  test_nsF5.py  test_simulate.py  test_uerd.py
tests/assets/juniward/costmap-cpp-fixed/: 00001.costmap  00002.costmap  00003.costmap  00004.costmap  00005.costmap
tests/assets/juniward/costmap-matlab/: 00001.mat  00002.mat  00003.mat  00004.mat  00005.mat
tests/assets/juniward/probability-map-matlab/: 00001.mat  00002.mat  00003.mat  00004.mat  00005.mat
tests/assets/nsF5/: README.md
tests/assets/uerd/: README.md
