[package]
name = "_conseal"
version = "2026.6.0"
edition = "2024"

[lib]
name = "_conseal"  # This is the module name, matching what Python will import
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
numpy = { version = "0.29.0" }
